Fix overflow issues on several pages

--- a/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
@@ -62,6 +62,8 @@
     @media screen and (max-width: 1000px) {
         padding: 10px 0;
         margin: 0 0 5px;
+        overflow: visible;
+        white-space: normal;
 
         .breadcrumb-item {
             font-size: 13px;
